Fix too large search bar

--- a/react/src/components/SearchField.css
+++ b/react/src/components/SearchField.css
@@ -14,6 +14,7 @@
 
 	font-size: 2em;
 	padding: 15px;
+	min-width: 50px; /* otherwise the min-size is set implicitly to some large value that goes outside the bounds on smaller devices */
 
 	border: none;
 	color: #202020;
